--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
             // Add button click
             $(".ui-btn-left").on("click", function () {
-                alert("Add Contact clicked");
+                window.location.href='index.html';
             });
 
             // Phone icon click
